VAVA-81 completing shipment details (#71)
* lots of changes

 and refractors of DAOs

and logging

* fix/ float casting

* ShipmentDetail: added users to state history

* Restrictions for state changes added

* Shipmentdetail -> breakdown working but it needs a back button probably